WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265903
[WebGPU] GPUDevice.createTexture incorrectly rejects 3D textures with render target usage.
https://bugs.webkit.org/show_bug.cgi?id=265903
Summary
[WebGPU] GPUDevice.createTexture incorrectly rejects 3D textures with render ...
Mike Wyrzykowski
Reported
2023-12-05 13:57:47 PST
[WebGPU] GPUDevice.createTexture incorrectly rejects 3D textures with render target usage.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-05 14:02:04 PST
<
rdar://problem/119214724
>
Mike Wyrzykowski
Comment 2
2023-12-05 14:16:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21357
EWS
Comment 3
2023-12-05 18:17:10 PST
Committed
271586@main
(7f34a75439d5): <
https://commits.webkit.org/271586@main
> Reviewed commits have been landed. Closing PR #21357 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug