[WebGPU] GPUDevice.createTexture incorrectly rejects 3D textures with render target usage. https://bugs.webkit.org/show_bug.cgi?id=265903 <radar://119214724>

Reviewed by Dan Glastonbury.

Fix 3D texture creation and update createTexture validation expectations
to all passing.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/createTexture.spec.js:
Update from ToT CTS.

* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Device::errorValidatingTextureCreation):
Allow 3D textures as render targets.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/createTexture-expected.txt:
All pass expectation generated from local run of createTexture.html test.

Canonical link: https://commits.webkit.org/271586@main